Arbol de decisiones

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 *.excalidraw
 *.excalidraw.*
 
-programacion/02_opencv/training_data/*
-programacion/02_opencv/training_images/*
-programacion/02_opencv/frames/*
+*.venv/
+
+*.training_images/*.jpg
+*frames/*
+/programacion/02_opencv/.training_images
+/programacion/02_opencv/frames
