--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 *frames/*
 /programacion/02_opencv/.training_images
 /programacion/02_opencv/frames
+/programacion/CNN/.all_images
+/programacion/04_scrappcloud/facebook-post-scraper
