--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /programacion/04_scrappcloud/facebook-post-scraper
 
 *modelo_fusionado/
+/programacion/proyecto4/tutor_algoritmos_lora2
+/programacion/proyecto4/modelo_fusionado2
